--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,7 @@
 /* custom font */
 @font-face {
-  font-family: syneTactile;
-  src:  url('../fonts/SyneTactile-Regular.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: syne;
-  src:  url('../fonts/Syne-ExtraBold.woff2') format('woff2');
+  font-family: GarabossePerle;
+  src:  url('../fonts/Garabosse-Perle.woff') format('woff');
 }
 
 @font-face {
@@ -19,7 +14,7 @@
   --padding: 1.5rem;
   --main-font-size: 1.2rem;
   --color-grey: #333;
-  --color-light: #fff;
+  --color-light: #ecff00;
   --color-text: var(--color-grey);
   --color-background: var(--color-light);
   --font-family-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -60,12 +55,12 @@ img {
 }
 
 h1 {
-  font-family: "syneTactile";
+  font-family: "GarabossePerle";
   font-size: 8rem;
-  line-height: 0.5;
-  margin: 0 0 80px 0;
-  color: var(--color-grey);
-  -webkit-text-fill-color: white; 
+  line-height: 0.7;
+  margin: 80px 0 0 0;
+  /*color: ;*/
+  -webkit-text-fill-color: white;
   -webkit-text-stroke: 2px var(--color-grey);
   text-align: center;
   font-weight: 400;
@@ -87,7 +82,7 @@ h3 {
 .content h1 {
   text-align: center;
   font-size: 2rem;
-  line-height: 0.8;
+  line-height: 0.9;
   font-family: "junicode";
   font-weight: 400;
   text-transform: uppercase;
@@ -97,7 +92,7 @@ h3 {
 }
 
 .content h2 {
-  font-family: "syne";
+  font-family: "GarabossePerle";
   font-size: 1.8rem;
   line-height: 1;
   margin: 0 0 20px 0;
@@ -114,10 +109,10 @@ h3 {
 }
 
 .content h4 {
-  font-family: "syneTactile";
+  font-family: "GarabossePerle";
   font-size: 3rem;
-  line-height: 0.8;
-  margin: 40px 0 20px 0;
+  line-height: 1.2;
+  margin: 2% 0 20px 0;
   color: var(--color-grey);
   text-align: center;
   font-weight: 400;
@@ -131,7 +126,7 @@ h3 {
 }
 
 .content p span {
-  font-family: "syneTactile";
+  font-family: "GarabossePerle";
   font-size: 1.6rem;
 }
 
